fix: fixing the overflow of containers to show correctly inside the screen

--- a/src/pages/home/components/Sidebar/Sidebar.module.scss
+++ b/src/pages/home/components/Sidebar/Sidebar.module.scss
@@ -1,9 +1,16 @@
 @use '~styles/global.scss' as *;
 @use '~styles/breakpoints.scss' as breakpoints;
 
+.container {
+  width: 100%;
+  height: 100svh;
+}
+
 .mobile {
   width: 100%;
-  overflow: hidden;
+  height: 100%;
+
+  padding: 0.8rem 1.6rem 4.8rem;
 
   position: fixed;
 
@@ -39,23 +46,21 @@
   display: none;
 }
 
+.items {
+  height: 100%;
+  overflow: auto;
+
+  padding: 0 0.8rem;
+}
+
+.content {
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+}
+
 @include breakpoints.from480 {
-  .container {
-    display: flex;
-    flex-direction: column;
-
-    align-items: center;
-    justify-content: stretch;
-
-    font-family: $mainFont;
-
-    font-size: 1.6rem;
-
-    background-color: #f808d0;
-    box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.1);
-    border-radius: 1.2rem 1.2rem 0 0;
-  }
-
   .header {
     display: flex;
     gap: 2.1rem;
@@ -123,6 +128,8 @@
     width: 100%;
 
     overflow-x: auto;
+
+    padding: 0;
 
     position: relative;
 
